--- a/Bay-Terrace.html
+++ b/Bay-Terrace.html
@@ -211,7 +211,7 @@
 
 		<!-- Neighborhood Name -->
 			<script>
-				var a = "";
+				var a = "Bay Terrace";
 				var b = " HSAP - Khan's Tutorial";
 				var d = " Tutoring <br> High School Achievement Program";
 				var c = a + b;
