--- a/Bronxdale.html
+++ b/Bronxdale.html
@@ -211,7 +211,7 @@
 
 		<!-- Neighborhood Name -->
 			<script>
-				var a = "";
+				var a = "Bronxdale";
 				var b = " HSAP - Khan's Tutorial";
 				var d = " Tutoring <br> High School Achievement Program";
 				var c = a + b;
