removed tutorial and added 's

--- a/Mapleton.html
+++ b/Mapleton.html
@@ -212,8 +212,8 @@
 		<!-- Neighborhood Name -->
 			<script>
 				var a = "Mapleton";
-				var b = " HSAP - Khan's Tutorial";
-				var d = " Tutoring <br> High School Achievement Program";
+				var b = "'s HSAP - Khan's Tutorial";
+				var d = "'s High School Achievement Program";
 				var c = a + b;
 				var e = a + d;
 				var g = "Why do " + a + " families choose Khan's?";
