--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 			<script>
 				var a = "";
 				var b = " HSAP - Khan's Tutorial";
-				var d = " Tutoring <br> High School Achievement Program";
+				var d = "High School Achievement Program";
 				var c = a + b;
 				var e = a + d;
 				var g = "Why do " + a + " families choose Khan's?";
