rebranded to GPA Booster and fixed replicator

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title id="Neighborhood Title">HSAP - Khan's Tutorial</title>
+		<title id="Neighborhood Title">GPA Booster Program - Khan's Tutorial</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -29,7 +29,7 @@
 			<section id="banner">
 				<header class="major">
 					<a href="http://www.khanstutorial.com/"><img src="images/logo3.png" width="50%" ></a>
-					<h1 id="Neighborhood 1">High School Achievement Program</h1>
+					<h1 id="Neighborhood 1">GPA Booster Program</h1>
 					<p>At KT we believe in providing the best education possible for our students.
 						<br />Our one of a kind program takes care of all of our high school students'
 						<br />needs through weekly meetings with their KT Certified Instructors and Mentors.</p>
@@ -61,7 +61,7 @@
 						<section id="three" class="special">
 							<header class="major">
 								<h2 id="Neighborhood 2">Why do families choose Khan's?</h2>
-								<p>High School is a challenging time for most students. From keeping up with weekly class exams, standardized tests & term papers, to dealing with long commutes to NYC's top high schools, we've all been there. KT's signature High School Achievement Program (HSAP) prepares our students in four ways. </p>
+								<p>High School is a challenging time for most students. From keeping up with weekly class exams, standardized tests & term papers, to dealing with long commutes to NYC's top high schools, we've all been there. KT's signature GPA Booster Program prepares our students in four ways. </p>
 							</header>
 							<section class="features">
 								<section>
@@ -72,7 +72,7 @@
 								<section>
 									<span class="icon major fa-pencil-square-o"></span>
 									<h3>Standardized Tests</h3>
-									<p>We cover all standardized testing needs. HSAP includes prep for your SAT, SAT II, ACT, AP, and Regents exams.</p>
+									<p>We cover all standardized testing needs. The GPA Booster Program includes prep for your SAT, SAT II, ACT, AP, and Regents exams.</p>
 								</section>
 								<section>
 									<span class="icon major fa-users"></span>
@@ -105,7 +105,7 @@
 								<div class="content">
 									<header class="major">
 										<h2>Weekend Sessions</h2>
-										<p>HSAP students meet with their Instructors for weekend sessions to go over any material from school, prepare for exams, and work on college applications.</p>
+										<p>GPA Booster students meet with their Instructors for weekend sessions to go over any material from school, prepare for exams, and work on college applications.</p>
 									</header>
 								</div>
 							</section>
@@ -237,8 +237,8 @@
 		<!-- Neighborhood Name -->
 			<!-- <script>
 				var a = "";
-				var b = " HSAP - Khan's Tutorial";
-				var d = "High School Achievement Program";
+				var b = " GPA Booster - Khan's Tutorial";
+				var d = "SAT & GPA Booster";
 				var c = a + b;
 				var e = a + d;
 				var g = "Why do " + a + " families choose Khan's?";
